--- a/frontend/output.css
+++ b/frontend/output.css
@@ -588,6 +588,10 @@ video {
   }
 }
 
+.fixed {
+  position: fixed;
+}
+
 .relative {
   position: relative;
 }
@@ -734,6 +738,22 @@ video {
   height: 100vh;
 }
 
+.h-24 {
+  height: 6rem;
+}
+
+.h-32 {
+  height: 8rem;
+}
+
+.h-40 {
+  height: 10rem;
+}
+
+.h-52 {
+  height: 13rem;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -752,6 +772,22 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.w-32 {
+  width: 8rem;
+}
+
+.w-40 {
+  width: 10rem;
+}
+
+.w-52 {
+  width: 13rem;
 }
 
 .max-w-7xl {
@@ -1160,6 +1196,14 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:h-52 {
+    height: 13rem;
+  }
+
+  .sm\:w-52 {
+    width: 13rem;
+  }
+
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -1174,9 +1218,33 @@ video {
   .md\:h-48 {
     height: 12rem;
   }
+
+  .md\:h-52 {
+    height: 13rem;
+  }
+
+  .md\:w-52 {
+    width: 13rem;
+  }
 }
 
 @media (min-width: 1024px) {
+  .lg\:h-72 {
+    height: 18rem;
+  }
+
+  .lg\:h-80 {
+    height: 20rem;
+  }
+
+  .lg\:w-72 {
+    width: 18rem;
+  }
+
+  .lg\:w-80 {
+    width: 20rem;
+  }
+
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
